# feverbft

./: Cargo.toml  README.md
peer/: Cargo.toml  Dockerfile  docker-compose.yaml
peer-server/: Cargo.toml  Dockerfile  docker-compose.yaml
peer-server/src/: fever.rs  main.rs  start.sh
peer-server_v0/: Cargo.toml  Dockerfile  docker-compose.yaml
peer-server_v0/src/: main.rs
peer/src/: clocky.rs  main.rs  main_v3.rs  main_v5.rs
peerb/: Cargo.toml  Dockerfile  docker-compose.yaml
peerb/src/: clocky.rs  main.rs  main_v2.rs  main_v4.rs
src/: lib.rs  node.rs  timey.rs
untitled/: Cargo.toml  Dockerfile
