[package]
name = "peerb"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
chrono = "0.4.19"
futures = { version = "0.3", features = ["compat"] }
libp2p = { version = "0.53.2", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
#ntp = "0.5"
rand = "0.8.5"
regex = "1.10.4"
sntpc = "0.3.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0.x"
