# syntax = denzp/cargo-wharf-frontend:latest
[package]
name = "untitled"
version = "0.1.0"
authors = ["varuneranki <varun.maitreya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4.35"

[package.metadata.wharf.builder]
image = "rust"

[package.metadata.wharf.output]
image = "scratch"
workdir = "/"
entrypoint = ["/usr/local/bin/untitledbuild"]

[[package.metadata.wharf.binary]]
name = "untitledbuild"
destination = "/usr/local/bin/untitledbuild"

